Fix border staying after header scrolls away on mobile

--- a/app/javascript/styles/mastodon/basics.scss
+++ b/app/javascript/styles/mastodon/basics.scss
@@ -9,34 +9,42 @@
 // Hide the top bar when scrolling down, show it when scrolling up
 body.layout-single-column.scroll-down .ui:after,
 body.layout-single-column.scroll-down .ui__header,
-body.layout-single-column.scroll-down .tabs-bar__wrapper {
+body.layout-single-column.scroll-down .tabs-bar__wrapper,
+body.layout-single-column.scroll-down .tabs-bar__portal {
+  opacity: 0;
   transform: translateY(-300%);
 }
 
 /* Also hide the bottom bar when scrolling down */
 body.layout-single-column.scroll-down .columns-area__panels__pane__inner {
+  opacity: 0;
   transform: translateY(100%);
 }
 
 body.layout-single-column.scroll-up .columns-area__panels__pane__inner,
 body.layout-single-column.scroll-up .ui:after,
 body.layout-single-column.scroll-up .ui__header,
-body.layout-single-column.scroll-up .tabs-bar__wrapper {
+body.layout-single-column.scroll-up .tabs-bar__wrapper,
+body.layout-single-column.scroll-down .tabs-bar__portal {
+  opacity: 1;
   transform: translateY(0);
 }
 
 body.layout-single-column.scroll-top .columns-area__panels__pane__inner,
 body.layout-single-column.scroll-top .ui:after,
 body.layout-single-column.scroll-top .ui__header,
-body.layout-single-column.scroll-top .tabs-bar__wrapper {
+body.layout-single-column.scroll-top .tabs-bar__wrapper,
+body.layout-single-column.scroll-down .tabs-bar__portal {
+  opacity: 1;
   transform: translateY(0);
 }
 
 body.layout-single-column .columns-area__panels__pane__inner,
 body.layout-single-column .ui:after,
 body.layout-single-column .ui__header,
-body.layout-single-column .tabs-bar__wrapper {
-  transition: transform 500ms ease-in-out;
+body.layout-single-column .tabs-bar__wrapper,
+body.layout-single-column.scroll-down .tabs-bar__portal {
+  transition: opacity 500ms ease-in-out, transform 500ms ease-in-out;
 }
 
 // Notification filter bar sticky on mobile
